Fixed overflow-x problem

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
 
 .game__container {
   position: relative;
-  width: 1000px;
+  width: 100%;
   height: 600px;
   display: flex;
   flex-direction: column;
